# py-frameworks-load-testing

./: README.md  plot.py  pyproject.toml  runner.sh  script.js
apps/: myblacksheep.py  myfastapi.py  mymuffin.py  mysanic.py
reports/blacksheep/: result-1m-1.html  result-1m-1.json  result-1m-10.html  result-1m-10.json  result-1m-1000.html  result-1m-1000.json  result-1m-120.html  result-1m-120.json  result-1m-150.html  result-1m-150.json  result-1m-30.html  result-1m-30.json  result-1m-300.html  result-1m-300.json  result-1m-60.html  result-1m-60.json  result-1m-600.html  result-1m-600.json  result-1m-90.html  result-1m-90.json
reports/fastapi/: result-1m-1.html  result-1m-1.json  result-1m-10.html  result-1m-10.json  result-1m-1000.html  result-1m-1000.json  result-1m-120.html  result-1m-120.json  result-1m-150.html  result-1m-150.json  result-1m-30.html  result-1m-30.json  result-1m-300.html  result-1m-300.json  result-1m-60.html  result-1m-60.json  result-1m-600.html  result-1m-600.json  result-1m-90.html  result-1m-90.json
reports/muffin/: result-1m-1.html  result-1m-1.json  result-1m-10.html  result-1m-10.json  result-1m-1000.html  result-1m-1000.json  result-1m-120.html  result-1m-120.json  result-1m-150.html  result-1m-150.json  result-1m-30.html  result-1m-30.json  result-1m-300.html  result-1m-300.json  result-1m-60.html  result-1m-60.json  result-1m-600.html  result-1m-600.json  result-1m-90.html  result-1m-90.json
reports/sanic/: result-1m-1.html  result-1m-1.json  result-1m-10.html  result-1m-10.json  result-1m-1000.html  result-1m-1000.json  (+14 more)
