[tool.poetry]
name = "py-frameworks-load-testing"
version = "0.1.0"
description = ""
authors = ["Grig Alex <alexengrigdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
blacksheep = "^2.0.7"
sanic = "^24.6.0"
sanic-openapi = "^21.12.0"
muffin = "^0.102.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
